--- a/package.json
+++ b/package.json
@@ -48,45 +48,65 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-prod": "ng build --prod --base-href=/haimo/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
-  "dependencies": {
-    "@angular/animations": "~9.1.9",
-    "@angular/common": "~9.1.9",
-    "@angular/compiler": "~9.1.9",
-    "@angular/core": "~9.1.9",
-    "@angular/forms": "~9.1.9",
-    "@angular/platform-browser": "~9.1.9",
-    "@angular/platform-browser-dynamic": "~9.1.9",
-    "@angular/router": "~9.1.9",
-    "rxjs": "~6.5.5",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
-  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular-devkit/build-ng-packagr": "~0.901.7",
-    "@angular/cli": "~9.1.7",
-    "@angular/compiler-cli": "~9.1.9",
-    "@angular/language-service": "~9.1.9",
+    "@angular-devkit/build-angular": "~0.1100.1",
+    "@angular-devkit/build-ng-packagr": "0.1002.0",
+    "@angular/animations": "~11.0.0",
+    "@angular/cdk": "~11.0.0",
+    "@angular/cli": "~11.0.0",
+    "@angular/common": "~11.0.0",
+    "@angular/compiler": "~11.0.0",
+    "@angular/compiler-cli": "~11.0.0",
+    "@angular/core": "~11.0.0",
+    "@angular/forms": "~11.0.0",
+    "@angular/platform-browser": "~11.0.0",
+    "@angular/platform-browser-dynamic": "~11.0.0",
+    "@angular/router": "~11.0.0",
+    "@fullcalendar/core": "4.1.0",
+    "@fullcalendar/daygrid": "4.1.0",
+    "@fullcalendar/interaction": "4.1.0",
+    "@fullcalendar/timegrid": "4.1.0",
+    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^9.0.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.8.3"
+    "chart.js": "2.7.3",
+    "codelyzer": "^6.0.0",
+    "del": "^2.2.0",
+    "file-saver": "^2.0.2",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-flatten": "^0.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.3",
+    "gulp-uglifycss": "^1.0.6",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.2.5",
+    "karma": "~5.1.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "~11.0.0",
+    "primeng": "^11.1.0-rc.1",
+    "primeflex": "2.0.0",
+    "primeicons": "4.1.0",
+    "prismjs": "1.20.0",
+    "protractor": "~7.0.0",
+    "quill": "1.3.7",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2",
+    "web-animations-js": "^2.3.2",
+    "xlsx": "^0.15.1",
+    "zone.js": "~0.10.2"
   }
 }
